--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^16.12.0",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
+    "typography-theme-grand-view": "^0.16.19",
     "typography-theme-kirkham": "^0.16.19"
   },
   "devDependencies": {
