--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-source-filesystem": "^2.9.0",
     "gatsby-transformer-remark": "^2.14.0",
     "react": "^16.12.0",
+    "react-burger-menu": "^3.0.3",
     "react-dom": "^16.12.0",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
