--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.1.4",
+    "@material-ui/core": "^4.11.2",
     "gatsby": "^2.26.1",
     "gatsby-plugin-emotion": "^5.2.0",
     "gatsby-plugin-typography": "^2.10.0",
@@ -23,7 +24,9 @@
     "react": "^16.12.0",
     "react-burger-menu": "^3.0.3",
     "react-dom": "^16.12.0",
+    "react-icons": "^4.1.0",
     "react-typography": "^0.16.19",
+    "react-vertical-timeline-component": "^3.3.1",
     "typography": "^0.16.19",
     "typography-theme-grand-view": "^0.16.19",
     "typography-theme-kirkham": "^0.16.19"
