--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.1.4",
     "@material-ui/core": "^4.11.2",
     "gatsby": "^2.26.1",
+    "gatsby-plugin-anchor-links": "^1.2.0",
     "gatsby-plugin-emotion": "^5.2.0",
     "gatsby-plugin-typography": "^2.10.0",
     "gatsby-source-filesystem": "^2.9.0",
