--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-burger-menu": "^3.0.3",
     "react-dom": "^16.12.0",
     "react-icons": "^4.1.0",
+    "react-responsive-carousel": "^3.2.11",
     "react-typography": "^0.16.19",
     "react-vertical-timeline-component": "^3.3.1",
     "typography": "^0.16.19",
