--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@emotion/react": "^11.1.4",
     "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "gatsby": "^2.26.1",
     "gatsby-plugin-anchor-links": "^1.2.0",
     "gatsby-plugin-emotion": "^5.2.0",
