--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-transformer-remark": "^2.14.0",
     "react": "^16.12.0",
     "react-burger-menu": "^3.0.3",
+    "react-devicon": "^0.1.9",
     "react-dom": "^16.12.0",
     "react-icons": "^4.1.0",
     "react-slick": "^0.27.14",
