--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^4.1.0",
     "react-media": "^1.10.0",
     "react-slick": "^0.27.14",
+    "react-spinners": "^0.10.4",
     "react-typography": "^0.16.19",
     "react-vertical-timeline-component": "^3.3.1",
     "slick-carousel": "^1.8.1",
