--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby": "^2.31.1",
     "gatsby-plugin-anchor-links": "^1.2.0",
     "gatsby-plugin-emotion": "^5.2.0",
+    "gatsby-plugin-react-helmet": "^3.9.0",
     "gatsby-plugin-typography": "^2.10.0",
     "gatsby-source-filesystem": "^2.9.0",
     "gatsby-transformer-remark": "^2.14.0",
@@ -27,6 +28,7 @@
     "react-burger-menu": "^3.0.3",
     "react-devicon": "^0.1.9",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.1.0",
     "react-media": "^1.10.0",
     "react-slick": "^0.27.14",
