--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-anchor-links": "^1.2.0",
     "gatsby-plugin-emotion": "^5.2.0",
     "gatsby-plugin-react-helmet": "^3.9.0",
+    "gatsby-plugin-slug": "^1.1.1",
     "gatsby-plugin-typography": "^2.10.0",
     "gatsby-source-filesystem": "^2.9.0",
     "gatsby-transformer-remark": "^2.14.0",
