--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-react-helmet": "^3.9.0",
     "gatsby-plugin-slug": "^1.1.1",
     "gatsby-plugin-typography": "^2.10.0",
+    "gatsby-remark-vscode": "^3.2.0",
     "gatsby-source-filesystem": "^2.9.0",
     "gatsby-transformer-remark": "^2.14.0",
     "react": "^16.12.0",
